@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FIDO NetMail/EchoMail
  *
- * $Id: areas.c,v 5.2 2006/10/14 08:52:55 anray Exp $
+ * $Id: areas.c,v 5.3 2006/10/20 12:13:18 anray Exp $
  *
  * Area <-> newsgroups conversion
  *
@@ -67,9 +67,9 @@ static void areas_init_xlate(void)
 	debug(8, "config: AreasXlate %s", cf);
 	
 	/* Chars in area name */
-	x_a = xstrtok(cf  , " \t");
+	x_a = (unsigned char *)xstrtok(cf  , " \t");
 	/* Chars in newsgroup name */
-	x_g = xstrtok(NULL, " \t");
+	x_g = (unsigned char *)xstrtok(NULL, " \t");
 	if(!x_a || !x_g)
 	    return;
 
