@@ -2,7 +2,7 @@
 /*****************************************************************************
  * FIDOGATE --- Gateway UNIX Mail/News <-> FIDO NetMail/EchoMail
  *
- * $Id: ftntoss.c,v 5.2 2005/11/23 23:12:22 anray Exp $
+ * $Id: ftntoss.c,v 5.3 2006/10/20 12:13:18 anray Exp $
  *
  * Toss FTN NetMail/EchoMail
  *
@@ -40,7 +40,7 @@
 
 
 #define PROGRAM 	"ftntoss"
-#define VERSION 	"$Revision: 5.2 $"
+#define VERSION 	"$Revision: 5.3 $"
 #define CONFIG		DEFAULT_CONFIG_MAIN
 
 
@@ -927,7 +927,7 @@ int do_echomail(Packet *pkt, Message *msg, MsgBody *body)
 	}
 
 	a = uplinks_line_get(TRUE, &msg->node_from);
-	if(a->options)
+	if(a != NULL && a->options != NULL)
 	    BUF_COPY5(autocreate_cmd, areaname, " ",
 		      autocreate_line, " ", a->options);
 	else
