@@ -1,3 +1,10 @@
+2006-10-20  Andrey Slsuar  <anrays@gmail.com>
+
+	* src/toss/ftntoss.c: Fix checking NULL entries in areas
+	(patch from Yauheni Kaliuta).
+	* src/common/areas.c: Correct types for x_a and x_g
+	(patch from Yauheny Kaliuta).
+
 2006-10-14  Andrey Slusar  <anrays@gmail.com>
 
 	======= Release 5.1.5ds ========================
